<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#040749"
    tools:context=".ArrangeFinance">


        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar" />


        <TextView
            android:id="@+id/textView"
            android:layout_width="249dp"
            android:layout_height="45dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="73dp"
            android:layout_marginLeft="73dp"
            android:layout_marginEnd="90dp"
            android:layout_marginRight="90dp"
            android:layout_marginBottom="645dp"
            android:gravity="center_horizontal"
            android:text="@string/ArrangeTopic"
            android:textAlignment="center"
            android:textColor="#FDF9F9"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/name"
            android:layout_width="350dp"
            android:layout_height="45dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="470dp"
            android:background="#FDFEFF"
            android:ems="10"
            android:hint="@string/name"
            android:inputType="textPersonName"
            android:text=""
            android:textColorHint="#6C6868" />

        <EditText
            android:id="@+id/nic"
            android:layout_width="350dp"
            android:layout_height="45dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="406dp"
            android:background="#FDFEFF"
            android:ems="10"
            android:hint="@string/nic"
            android:inputType="textPersonName"
            android:text=""
            android:textColorHint="#6C6868" />


        <EditText
            android:id="@+id/address"
            android:layout_width="350dp"
            android:layout_height="45dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="345dp"
            android:background="#FDFEFF"
            android:ems="10"
            android:hint="@string/add"
            android:inputType="textPostalAddress"
            android:text=""
            android:textColorHint="#6C6868" />

        <EditText
            android:id="@+id/con"
            android:layout_width="350dp"
            android:layout_height="45dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="285dp"
            android:background="#FDFEFF"
            android:ems="10"
            android:hint="@string/con"
            android:inputType="phone"
            android:text=""
            android:textColorHint="#6C6868" />

        <EditText
            android:id="@+id/mail"
            android:layout_width="350dp"
            android:layout_height="45dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="226dp"
            android:background="#FDFEFF"
            android:ems="10"
            android:hint="@string/mail"
            android:inputType="textEmailAddress"
            android:text=""
            android:textColorHint="#6C6868" />

        <EditText
            android:id="@+id/job"
            android:layout_width="350dp"
            android:layout_height="45dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="166dp"
            android:background="#FDFEFF"
            android:ems="10"
            android:hint="@string/job"
            android:inputType="textPersonName"
            android:text=""
            android:textColorHint="#6C6868" />

        <EditText
            android:id="@+id/income"
            android:layout_width="350dp"
            android:layout_height="45dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="104dp"
            android:background="#FDFEFF"
            android:ems="10"
            android:hint="@string/income"
            android:inputType="number"
            android:text=""
            android:textColorHint="#6C6868" />

        <Button
            android:id="@+id/btn1"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="224dp"
            android:layout_marginRight="224dp"
            android:layout_marginBottom="25dp"
            android:background="#03A9F4"
            android:text="@string/arranBtn1"
            app:backgroundTint="#2BADE8" />

        <Button
            android:id="@+id/btn2"
            android:layout_width="165dp"
            android:layout_height="59dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="41dp"
            android:layout_marginRight="41dp"
            android:layout_marginBottom="20dp"
            android:text="@string/arranBtn2"
            app:backgroundTint="#2BADE8" />

        <ImageView
            android:id="@+id/imageView12"
            android:layout_width="249dp"
            android:layout_height="122dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="74dp"
            android:layout_marginLeft="74dp"
            android:layout_marginEnd="87dp"
            android:layout_marginRight="87dp"
            android:layout_marginBottom="521dp"
            android:contentDescription="TODO"
            app:srcCompat="@drawable/ic_loan" />


</RelativeLayout>